Dibuat menggunakan Colaboratory

--- a/Case_Study_04_Kelompok_F.ipynb
+++ b/Case_Study_04_Kelompok_F.ipynb
@@ -75,7 +75,7 @@
       "source": [
         "Menilai nilai peningkatan efisiensi energi dapat menjadi tantangan karena tidak ada cara untuk benar-benar mengetahui berapa banyak energi yang akan digunakan bangunan tanpa perbaikan. Yang terbaik yang bisa kita lakukan adalah membangun model kontrafaktual. Setelah bangunan dirombak, konsumsi energi baru (lebih rendah) dibandingkan dengan nilai model bangunan asli untuk menghitung penghematan dari retrofit. Model yang lebih akurat dapat mendukung insentif pasar yang lebih baik dan memungkinkan pembiayaan dengan biaya lebih rendah.\n",
         "\n",
-        "Kompetisi ini menantang Anda untuk membangun model kontrafaktual ini di empat jenis energi berdasarkan tingkat penggunaan historis dan cuaca yang diamati. Kumpulan data mencakup pembacaan meter per jam selama tiga tahun dari lebih dari seribu bangunan di beberapa lokasi berbeda di seluruh dunia"
+        "Tujuan dari Study Case ini untuk membangun model kontrafaktual di empat jenis energi berdasarkan tingkat penggunaan historis dan cuaca yang diamati. Kumpulan data mencakup pembacaan meter per jam selama tiga tahun dari lebih dari seribu bangunan di beberapa lokasi berbeda di seluruh dunia."
       ],
       "metadata": {
         "id": "U0Xm-x1eoGbP"
@@ -1167,7 +1167,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Dari grafik di atas, terlihat bahwa record yang disimpan bpaling banyak adalah gedung yang digunakan sebagai tempat Education, yaitu sebanyak 537 bangunan. Kemudian empat bangunan lain yang record-nya tinggi adalah Office, Entertaiment/publict assembly, Public services, dan Lodging/residential."
+        "Dari grafik di atas, terlihat bahwa record yang disimpan paling banyak adalah \n",
+        "gedung yang digunakan sebagai tempat Education, yaitu sebanyak 537 bangunan. Kemudian empat bangunan lain yang record-nya tinggi adalah Office, Entertaiment/publict assembly, Public services, dan Lodging/residential."
       ],
       "metadata": {
         "id": "MWTqdQKjqyx8"
@@ -1253,7 +1254,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Terlihat dari grafik di atas bahwa banyaknya bangunan yang terecord menurun sejalan dengan kenaikan luas bangunan.\n",
+        "Terlihat dari grafik di atas bahwa banyaknya bangunan yang terrecord menurun sejalan dengan kenaikan luas bangunan.\n",
         "\n",
         "Mayoritas bangunan berdiri dengan luas bangunan di bawah 200000 kaki persegi"
       ],
@@ -2230,6 +2231,7 @@
         "\n",
         "Dari model didapatkan hasil bahwa\n",
         "• Keseluruhan variabel memiliki nilai p-value < 0.05 sehingga data signifikan secara statistik.\n",
+        "\n",
         "• Berdasarkan nilai  𝑅^2 , didapatkan 0,490 maka dapat dikatakan bahwa model hanya menjelaskan 4,9% variansi dari data, sehingga model ini tidak terlalu bagus dan akurat untuk digunakan.\n",
         "\n",
         "Coef menunjukkan seberapa banyak kenaikan 1 unit pada variabel bebas terhadap variabel terikat. Sehingga,\n",
@@ -2531,7 +2533,7 @@
       "source": [
         "- Didapatkan nilai R^2 dan adjusted R^2 yang lebih tinggi, artinya informasi mengenai square feet, air temperature, cloud coverage, hingga wind speed dapat menjelaskan variabel Y lebih baik.\n",
         "\n",
-        "- Selain model berguna secara statistik (dilihat dari nilai p value f mendekati 0) masing-masing variabel juga berguna (Signifikan secara statistik) terhadap variabel Y\n",
+        "- Selain model berguna secara statistik (dilihat dari nilai p value f mendekati 0) masing-masing variabel juga berguna (Signifikan secara statistik) terhadap variabel Y, kecuali variabel wind_direction yang tidak signifikan secara statistik\n",
         "\n"
       ],
       "metadata": {
@@ -2551,7 +2553,8 @@
         "- Jika sebuah instansi edukasi, kesehatan, dan retail ingin membuat sebuah bangunan maka perlu dipersiapkan dana yang cukup besar karena penggunaan listrik dari ke-3 sektor tersebut cukup tinggi diantara sektor lainnya.\n",
         "\n",
         "- Jika sebuah konstruksi ingin membuat sebuah bangunan yang memiliki luas bangunan yang cukup besar, maka perlu dipersiapkan daya listrik yang cukup besar pula, karena terdapat korelasi yang positif dan cukup besar antara keduanya.\n",
-        "\n"
+        "\n",
+        "- Dari sejumlah model regresi yang dicoba, didapatkan \n"
       ],
       "metadata": {
         "id": "uo7L4E-6DH_7"
