Dibuat menggunakan Colaboratory

--- a/Case_Study_04_Kelompok_F.ipynb
+++ b/Case_Study_04_Kelompok_F.ipynb
@@ -2546,6 +2546,8 @@
         "#Kesimpulan dan Saran :\n",
         "- Secara garis besar data yang diberikan, masih kurang baik karena masih terdapat banyak missing values.\n",
         "\n",
+        "- Terdapat koefisien positif untuk variabel square feet, cloud coverage, dew temperature, precipt depth 1 hr, dan wind direction yang mempengaruhi kenaikan listrik. Sementara, terdapat koefisien negatif untuk variabel sea level pressure yang mempengaruhi penurunan listrik.\n",
+        "\n",
         "- Terdapat outlier pada data, tetapi telah diatasi dengan melakukan scalling\n",
         "\n",
         "- Untuk melihat meter_reading sebagai variabel dependen, dihapuskan 2 variabel dari yang diberikan yaitu variabel year_built dan floor_counts karena terlalu banyak missing values yang didapatkan\n",
@@ -2554,7 +2556,7 @@
         "\n",
         "- Jika sebuah konstruksi ingin membuat sebuah bangunan yang memiliki luas bangunan yang cukup besar, maka perlu dipersiapkan daya listrik yang cukup besar pula, karena terdapat korelasi yang positif dan cukup besar antara keduanya.\n",
         "\n",
-        "- Dari sejumlah model regresi yang dicoba, didapatkan \n"
+        "- Dari sejumlah model regresi yang dicoba, didapatkan model reg"
       ],
       "metadata": {
         "id": "uo7L4E-6DH_7"
