Dibuat menggunakan Colaboratory

--- a/Case_Study_04_Kelompok_F.ipynb
+++ b/Case_Study_04_Kelompok_F.ipynb
@@ -2556,7 +2556,7 @@
         "\n",
         "- Jika sebuah konstruksi ingin membuat sebuah bangunan yang memiliki luas bangunan yang cukup besar, maka perlu dipersiapkan daya listrik yang cukup besar pula, karena terdapat korelasi yang positif dan cukup besar antara keduanya.\n",
         "\n",
-        "- Dari sejumlah model regresi yang dicoba, didapatkan model reg"
+        "- Model yang kami pilih adalah model yang tidak memuat variabel kategori dan untuk variabel independent (X) hanya memuat square feet, cloud coverage, precipt depth 1 hr, dan sea level."
       ],
       "metadata": {
         "id": "uo7L4E-6DH_7"
